[package]
name = "plexy"
version = "0.1.0"
author = "Ivan"
about = "Simple dynamic TCP proxy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
derive = "1.0.0"
features = "0.10.0"
futures = "0.3.25"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
