[package]
name = "plexy"
version = "0.3.1"
authors = ["Ivan<ivan@zderadicka.eu>"]
description = "Simple dynamic TCP proxy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
bytes = "1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
console-subscriber = "0.1.8"
dashmap = "5.4.0"
derive = "1.0.0"
features = "0.10.0"
futures = "0.3.25"
fxhash = "0.2.1"
indexmap = "1.9.2"
nom = "7.1.3"
parking_lot = "0.12.1"
rand = "0.8.5"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
anyhow = "1.0.68"
http = "0.2.8"
httparse = "1.8.0"
httpdate = "1.0.2"
