[package]
name = "plexy"
version = "0.4.0"
authors = ["Ivan<ivan@zderadicka.eu>"]
description = "Simple dynamic TCP proxy, can load balance connections between many remote end points"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
bytes = "1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
console-subscriber = { version = "0.1.8", optional=true}
dashmap = "5.4.0"
derive = "1.0.0"
features = "0.10.0"
futures = "0.3.25"
fxhash = "0.2.1"
indexmap = "1.9.2"
jsonrpsee = { version = "0.18.2", features = ["full"] }
nom = "7.1.3"
parking_lot = "0.12.1"
rand = "0.8.5"
rustls = "0.21.1"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
tokio-rustls = "0.24.0"
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rustls-pemfile = "1.0.2"
webpki = "0.22.0"
webpki-roots = "0.23.1"


opentelemetry = { version = "0.19.0", features = ["metrics", "rt-tokio"], optional=true }
opentelemetry-prometheus = { version = "0.12.0", features = ["prometheus-encoding"], optional=true }
hyper = { version = "0.14.26", features = ["server", "tcp", "http1"], optional=true }
prometheus = {version="0.13.3", optional=true}

[features]
default = ["metrics"]
tokio-console=["dep:console-subscriber"]
metrics=["dep:opentelemetry", "dep:opentelemetry-prometheus", "dep:hyper", "dep:prometheus"]

[dev-dependencies]
anyhow = "1.0.68"
http = "0.2.8"
httparse = "1.8.0"
httpdate = "1.0.2"

